--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <div class="answer">
             <div id="yes">có</div>
             <div id="no">không</div>
+            <div id="no">không</div>
+
         </div>
     </div>
     <script src="index.js"></script>
