--- a/Buoi-3/Web component/index.html
+++ b/Buoi-3/Web component/index.html
@@ -9,17 +9,15 @@
             display: flex;
             justify-content: center;
         }
-        .card-container{
-
-        }
+ 
     </style>
 </head>
 <body>
     <div class="container" >
     <card-container title="con meo" description ="fajhfjsdfj" imgsrc="https://3.pik.vn/2020629e177c-376f-49ff-8f99-79001189bbc0.jpg"></card-container>
-    <card-container imgsrc=""></card-container>
-    <card-container></card-container>
-    </div>  
+    <card-container title="con meo" description ="ègjghjkghj" imgsrc="https://3.pik.vn/2020629e177c-376f-49ff-8f99-79001189bbc0.jpg"></card-container>
+    <card-container title="con mfdfseo" description ="fsfsdfdsertyey" imgsrc="https://3.pik.vn/2020629e177c-376f-49ff-8f99-79001189bbc0.jpg"></card-container>
+    </div>  f
     <script src="index.js" type="module"></script>
 </body>
 </html>
