--- a/Buoi-3/btvnB3/index.html
+++ b/Buoi-3/btvnB3/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Chưa show được ảnh của từng học sinh -->
     <div id="list">
 
     </div>
